Mantaflow problem with geometry nodes #88531

Closed
opened 2021-05-24 19:38:49 +02:00 by Erik Abrahamsson · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-21 13:09, hash: 5158d1b42d
Worked: -

Short description of error
Mantaflow doesn't notice when geometry nodes are used to modify a mesh. Looks like it could be related to if the object is keyframed or not.

Exact steps for others to reproduce the error
Open the attached file and in the Fluid Domain click Bake All.
Run the animation.
The inflow follows Cube1 but not Cube2. The difference between the cubes is that Cube1 has a keyframe on location, but it seems like it doesn't matter which property is keyframed.

bild.png

mantaflow-bug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-21 13:09, hash: `5158d1b42d` Worked: - **Short description of error** Mantaflow doesn't notice when geometry nodes are used to modify a mesh. Looks like it could be related to if the object is keyframed or not. **Exact steps for others to reproduce the error** Open the attached file and in the Fluid Domain click Bake All. Run the animation. The inflow follows Cube1 but not Cube2. The difference between the cubes is that Cube1 has a keyframe on location, but it seems like it doesn't matter which property is keyframed. ![bild.png](https://archive.blender.org/developer/F10139253/bild.png) [mantaflow-bug.blend](https://archive.blender.org/developer/F10139239/mantaflow-bug.blend)
Poster
Collaborator

Added subscriber: @erik85

Added subscriber: @erik85

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The thing is that this seems broken even for shapekey animation etc., quite bad...

The thing is that this seems broken even for shapekey animation etc., quite bad...
[shapekey.blend](https://archive.blender.org/developer/F10141145/shapekey.blend)

I have checked other modifiers incl. Armatures and Lattices, these still seem to function correctly.

The thing is that this seems broken even for shapekey animation etc., quite bad...

Will report this separately

I have checked other modifiers incl. Armatures and Lattices, these still seem to function correctly. > The thing is that this seems broken even for shapekey animation etc., quite bad... Will report this separately

The shapekey issue is in #88566 (Mantaflow inflow with shapekeys is not working anymore (regression))

The shapekey issue is in #88566 (Mantaflow inflow with shapekeys is not working anymore (regression))

This issue was referenced by c1d67abcd8

This issue was referenced by c1d67abcd8f092c2d5e6dcea119690b750269599

This issue was referenced by 03c0fa1cdb

This issue was referenced by 03c0fa1cdb38695629c76fe6b14f733702b7061a
Philipp Oeser self-assigned this 2021-05-25 16:39:12 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88531
There is no content yet.